crates/reinhardt-urls/crates/routers-macros/tests/ui/invalid_parameter_hyphen.rs
use reinhardt_routers_macros::path;

fn main() {
	// Error: parameter names cannot contain hyphens
	let _path = path!("/users/{user-id}/");
}
